# DropSim

./: CMakeLists.txt  DataStructures.cpp  DataStructures.h  IO.cpp  IO.h  Main.cpp  Makefile  ReportThreadData.cpp  ReportThreadData.h  SimArgs.cpp  SimArgs.h  SimResult.cpp  SimResult.h  Simulation.cpp  Simulation.h  ThreadData.cpp  ThreadData.h  easy.sh  enum.h  simulation.cpp  simulation.h  versions.h.in
Gained/: EasyG.csv  HardG.csv  easyG.csv
Weights/: CoxW.csv  DemonicW.csv  EasyW.csv  EliteW.csv  GOTRW.csv  HardW.csv  MasterW.csv  MedW.csv  TemporossNoPetW.csv  ca.csv  hydraW.csv  toaW.csv
scripts/: Benchmark.sh  barrows.sh  ca.sh  cox.sh  demonics.sh  easy.sh  elite.sh  hard.sh  master.sh  med.sh  tempoross.sh  test.sh
